--- a/public/contactUs.html
+++ b/public/contactUs.html
@@ -35,8 +35,8 @@
             <li class="nav-item active">
               <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <li class="nav-item ">
+              <a class="nav-link" href="shop.html"  role="button"  aria-haspopup="true" aria-expanded="false">
                 Shop
               </a>
             </li>
